--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 9090
+
+spring:
+  datasource:
+    hikari:
+      maximum-pool-size: 4
+    url: jdbc:postgresql://192.168.219.183:19621/test_db
+    username: test_user
+    password: test123
