yml 프로퍼티 수정 및 Dockerfile 생성 #14
docker 프로파일추ㄱ

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -13,6 +13,6 @@ spring:
   datasource:
     hikari:
       maximum-pool-size: 4
-    url: jdbc:postgresql://jongmo.hopto.org:19363621/test_db
+    url: jdbc:postgresql://localhost:19621/test_db
     username: test_user
     password: test123
