--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -13,6 +13,6 @@ spring:
   datasource:
     hikari:
       maximum-pool-size: 4
-    url: jdbc:postgresql://localhost:19621/test_db
+    url: jdbc:postgresql://host.docker.internal:19621/test_db
     username: test_user
     password: test123
