Config가 포함된 파일은 테스트되지 않도록 설정 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -69,6 +69,7 @@ jacocoTestReport {
 					exclude: [
 						'**/ServletInitializer*',
 						'**/PersonalnasApplication*',
+						'**/Config*',
 					])
 		}))
 	}
@@ -97,6 +98,7 @@ jacocoTestCoverageVerification {
 			excludes = [
 				'**.ServletInitializer*',
 				'**.PersonalnasApplication*',
+				'**.*Config*',
 			]
         }
     }
