--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "primeicons": "^5.0.0",
+    "primevue": "^2.9.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.4"
   },
