회원가입 화면 일부 구현 및 eslint 일부 설정 비활성화

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,11 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": ["error", {
+        "ignores": ["Card","Button","Toast","Divider"]
+      }]
+    }
   },
   "browserslist": [
     "> 1%",
